Revise title and expand About section content
Updated the title and enhanced the About section with detailed descriptions of RC8's features, mission, team, and future vision.

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>RC8 - Next Generation Gaming Tool</title>
+    <title>RC8</title>
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700;900&family=Rajdhani:wght@300;500;700&display=swap" rel="stylesheet">
     <style>
         * {
@@ -556,27 +556,40 @@
             <div class="hero-subtitle">The Next Generation</div>
             <p class="hero-description">
                 Experience unparalleled performance with RC8 - the revolutionary gaming tool engineered for efficiency, 
-                compatibility, and safety. Completely non-lethal design meets cutting-edge technology.
+                compatibility, and safety. Completely safe design meets Tos
             </p>
             <div class="coming-soon-badge">COMING SOON</div>
         </section>
 
         <!-- About Section -->
-        <section class="about-section" id="about">
-            <h2 class="section-title">About RC8</h2>
-            <div class="about-content">
-                <p class="about-text">
-                    [EDIT THIS SECTION - Add your information about RC8 here]
-                </p>
-                <p class="about-text">
-                    RC8 is the next generation gaming tool designed for maximum efficiency and performance. 
-                    Our non-lethal architecture ensures safety while delivering unparalleled results.
-                </p>
-                <p class="about-text">
-                    [Add more paragraphs about your product, mission, team, or whatever you want to share]
-                </p>
-            </div>
-        </section>
+<section class="about-section" id="about">
+    <h2 class="section-title">About RC8</h2>
+    <div class="about-content">
+        <p class="about-text">
+            RC8 is a powerful server-sided script designed to handle complex operations efficiently and securely. By running entirely on the server, it ensures that all critical processes are protected from client-side manipulation, providing a stable and fair environment for users. The script is optimized for performance, allowing it to manage multiple tasks simultaneously without lag or conflicts. With its modular design, RC8 can easily be extended or integrated into larger projects, making it a versatile tool for developers who want reliable server-side functionality. Its focus on security, efficiency, and scalability makes RC8 a robust backbone for any server-driven application.
+        </p>
+
+        <p class="about-text">
+            RC8 is more than just a server-sided script—it’s a complete solution for developers who want reliability, security, and efficiency at the heart of their projects. Built with scalability in mind, RC8 handles complex tasks effortlessly while maintaining stability, ensuring that your applications run smoothly even under heavy load. Its modular architecture allows for easy customization, so developers can adapt it to a wide range of projects without having to start from scratch.
+        </p>
+
+        <h3 class="about-text">Our Mission</h3>
+        <p class="about-text">
+            At RC8, our mission is to empower developers with tools that are both powerful and user-friendly. We believe that secure, efficient server-side systems shouldn’t be complicated or restrictive. By providing a script that prioritizes performance, protection, and flexibility, we aim to help creators focus on building amazing experiences rather than worrying about backend issues.
+        </p>
+
+        <h3 class="about-text">The Team Behind RC8</h3>
+        <p class="about-text">
+            RC8 is crafted by a dedicated team of developers who are passionate about clean, effective code. Each member brings expertise in server-side programming, optimization, and security, ensuring that every line of RC8 is carefully designed to perform at its best. Collaboration and innovation drive our work, and we constantly seek ways to improve the script with new features and enhancements based on user feedback.
+        </p>
+
+        <h3 class="about-text">Looking Forward</h3>
+        <p class="about-text">
+            We envision RC8 becoming a trusted standard for server-side scripting in the development community. As projects grow more complex, having a reliable backend system is essential, and RC8 is designed to meet those demands. Our commitment is to continue improving, expanding, and refining RC8 so that developers can build confidently, knowing their server operations are in safe hands.
+        </p>
+    </div>
+</section>
+
 
         <!-- CTA Section -->
         <section class="cta-section" id="notify">
